bang and olufsen landing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,16 @@
-body {
-  margin: 0;
-}
+@import './variables';
+@import './mixins';
+@import './page';
+@import './header';
+@import './top-bar';
+@import './icons';
+@import './menu';
+@import './nav';
+@import './section-title';
+@import './mainpage';
+@import './recommended';
+@import './product';
+@import './categories';
+@import './category';
+@import './about-us';
+@import './contacts';
